Fix dark theme lookup text being the wrong color

--- a/resources/public/themes/dark.css
+++ b/resources/public/themes/dark.css
@@ -18,7 +18,7 @@ html {
     
     --lookup-border-color: #222;
     --lookup-background-color: #333;
-    --lookup-text-color: #333;
+    --lookup-text-color: #eee;
     
     --report-button-border-color: #333;
 
